--- a/happstack-auth.cabal
+++ b/happstack-auth.cabal
@@ -23,11 +23,12 @@ Library
         mtl                 == 1.*,
         containers          == 0.*,
         random              == 1.*,
-        happstack           >= 0.5.1,
-        happstack-state     >= 0.5.1,
-        happstack-server    >= 0.5.1,
-        happstack-ixset     >= 0.5.1,
-        happstack-data      >= 0.5.1,
+        old-time            == 1.*,
+        happstack           == 0.5.*,
+        happstack-state     == 0.5.*,
+        happstack-server    == 0.5.*,
+        happstack-ixset     == 0.5.*,
+        happstack-data      == 0.5.*,
         Crypto              == 4.*,
         convertible         == 1.*
 
@@ -45,3 +46,5 @@ Library
         Happstack.Auth.Internal.Data.User
         Happstack.Auth.Internal.Data.UserId
         Happstack.Auth.Internal.Data.Username
+
+        Happstack.Auth.Internal.Data.Old.SessionData0
