--- a/happstack-auth.cabal
+++ b/happstack-auth.cabal
@@ -10,7 +10,7 @@ Category:            Web
 
 Homepage:            http://github.com/mcmaniac/happstack-auth
 Build-Type:          Simple
-Cabal-Version:       >= 1.6
+Cabal-Version:       >= 1.8
 
 Library
 
@@ -23,11 +23,11 @@ Library
         mtl                 == 1.*,
         containers          == 0.*,
         random              == 1.*,
-        happstack           >= 0.5.1,
-        happstack-state     >= 0.5.1,
-        happstack-server    >= 0.5.1,
-        happstack-ixset     >= 0.5.1,
-        happstack-data      >= 0.5.1,
+        happstack           == 0.5.*,
+        happstack-state     == 0.5.*,
+        happstack-server    == 0.5.*,
+        happstack-ixset     == 0.5.*,
+        happstack-data      == 0.5.*,
         Crypto              == 4.*,
         convertible         == 1.*
 
